_generated-doc/3.8/config/quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config.adoc

:summaryTableId: quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_configuration]]link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-endpoint]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-endpoint[quarkus.otel.exporter.otlp.endpoint]`


[.description]
--
Sets the OTLP endpoint to connect to. If unset, defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_GRPC_BASE_URI`. We are currently using just the traces, therefore `quarkus.otel.exporter.otlp.traces.endpoint` is recommended.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:4317/`


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-endpoint]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-endpoint[quarkus.otel.exporter.otlp.traces.endpoint]`


[.description]
--
OTLP Exporter specific. Will override `otel.exporter.otlp.endpoint`, if set.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.exporter.otlp.endpoint<` or defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_GRPC_BASE_URI`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:4317/`


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-headers]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-headers[quarkus.otel.exporter.otlp.traces.headers]`


[.description]
--
Key-value pairs to be used as headers associated with gRPC requests. The format is similar to the `OTEL_EXPORTER_OTLP_HEADERS` environment variable, a list of key-value pairs separated by the "=" character. i.e.: key1=value1,key2=value2

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-compression]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-compression[quarkus.otel.exporter.otlp.traces.compression]`


[.description]
--
Sets the method used to compress payloads. If unset, compression is disabled. Currently supported compression methods include `gzip` and `none`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
-- a|
`gzip`, `none` 
|


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-timeout]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-timeout[quarkus.otel.exporter.otlp.traces.timeout]`


[.description]
--
Sets the maximum time to wait for the collector to process an exported batch of spans. If unset, defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_TIMEOUT_SECS`s.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`10S`


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-protocol]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-protocol[quarkus.otel.exporter.otlp.traces.protocol]`


[.description]
--
OTLP defines the encoding of telemetry data and the protocol used to exchange data between the client and the server. Depending on the exporter, the available protocols will be different.

Currently, only `grpc` and `http/protobuf` are allowed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--|string 
|`grpc`


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-key-cert-keys]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-key-cert-keys[quarkus.otel.exporter.otlp.traces.key-cert.keys]`


[.description]
--
Comma-separated list of the path to the key files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-key-cert-certs]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-key-cert-certs[quarkus.otel.exporter.otlp.traces.key-cert.certs]`


[.description]
--
Comma-separated list of the path to the certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-trust-cert-certs]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-trust-cert-certs[quarkus.otel.exporter.otlp.traces.trust-cert.certs]`


[.description]
--
Comma-separated list of the trust certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TRUST_CERT_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TRUST_CERT_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-enabled]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-enabled[quarkus.otel.exporter.otlp.traces.proxy-options.enabled]`


[.description]
--
If proxy connection must be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-username]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-username[quarkus.otel.exporter.otlp.traces.proxy-options.username]`


[.description]
--
Set proxy username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-password]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-password[quarkus.otel.exporter.otlp.traces.proxy-options.password]`


[.description]
--
Set proxy password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-port]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-port[quarkus.otel.exporter.otlp.traces.proxy-options.port]`


[.description]
--
Set proxy port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3128`


a| [[quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-host]]`link:#quarkus-otel-exporter-otlp-config-runtime-exporter-otlp-exporter-runtime-config_quarkus-otel-exporter-otlp-traces-proxy-options-host[quarkus.otel.exporter.otlp.traces.proxy-options.host]`


[.description]
--
Set proxy host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROXY_OPTIONS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
